add vcf2gsvar route
